--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,3 +19,4 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_DAYS_OF_WEEK: "False"
+          SHOW_LOC_CHART: "False"
