--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -17,5 +17,6 @@ jobs:
           SHOW_OS: "False"
           SHOW_PROFILE_VIEWS: "False"
           SHOW_LINES_OF_CODE: "True"
+          SHOW_LOC_CHART: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_DAYS_OF_WEEK: "False"
