--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,3 +20,4 @@ jobs:
           SHOW_LOC_CHART: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_DAYS_OF_WEEK: "False"
+          SHOW_LOC_CHART: "False:
