--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,7 +15,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_OS: "False"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_LINES_OF_CODE: "True"
+          SHOW_LINES_OF_CODE: "False"
           SHOW_LOC_CHART: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_DAYS_OF_WEEK: "False"
+          SHOW_COMMIT: "False"
